fixed details behind logic, added select + add to favs btns, working trips section

--- a/src/components/trips/trips-body/TripsBody.css
+++ b/src/components/trips/trips-body/TripsBody.css
@@ -1,15 +1,24 @@
+
+
 .trips-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-bottom: 5vh;
+    & img{
+        margin-right: 5vw;
+    }
+    & h1{
+        margin-right: 5vw;
+    }
     & .trips{
         display: flex;
         gap: 10%;
         width: 100vw;
         justify-content: space-evenly;
     }
+
 }
 
 ul{
@@ -20,10 +29,32 @@ li{
     list-style: none;
 }
 
+
 @media (max-width: 429px) {
  .trips-container{
+    & img{
+        width: 100vw;
+        margin-left: 5vw;
+    }
+    & h1{
+        margin-right: 0vw;
+    }
    & .trips{
     flex-direction: column;
    }
  }
 }
+
+@media (max-width: 768px) {
+    .trips-container{
+       & img{
+           width: 100vw;
+           margin-left: 5vw;       }
+       & h1{
+           margin-right: 0vw;
+       }
+      & .trips{
+       flex-direction: column;
+      }
+    }
+   }
